--- a/task.html
+++ b/task.html
@@ -3,7 +3,7 @@
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         
-        <meta name="author" content="Prudvi Raju Vecima Networks Private LTD">
+        <meta name="author" content="Prudvi Raju Private LTD">
         <meta name="keywords" content="HTML,JQUERY,POPUP,CSS,BOXMODEL,DIV Management">
         <meta name="description" content="Html Elememts Manipulation using Ember and Jquery">
         <title>Fetch Images from Folder</title>
